fix horizontal overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -349,6 +349,7 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: clip;
 }
 
 
